@@ -7,6 +7,7 @@
 - compat-27: Add ~date-ordinal-to-time~.
 - compat-27: Add ~make-decoded-time~.
 - compat-27: Add ~ring-resize~.
+- compat-27: Add ~minibuffer-history-value~.
 - compat-28: Add ~color-dark-p~.
 - compat-28: Add ~with-window-non-dedicated~.
 - compat-28: Add ~directory-files-and-attributes~ with COUNT argument.
